--- a/youvid_downloader.kv
+++ b/youvid_downloader.kv
@@ -7,11 +7,12 @@
         text:"Youvid Downloader"
         text_size:self.size
         font_size:80
-        size_hint:0.5,0.5
+        # size_hint:0.5,0.5
+        size_hint_y:.5
         halign:'center'
         valign:'center'
         font_name:'Concept'
-        background_color:0.75,0.2,0,0.45
+        background_color:0.75,0.5,0,0.2
         canvas.before:
             Color:
                 rgba:self.background_color
@@ -32,10 +33,11 @@
         size_hint:0.2,0.2
         id:link 
         font_name:'Bertina'
+        focus:True 
 
     Button:
         text:'Download'
-        background_color:0.43,0.123,0.5,0.6
+        background_color:0.75,0.5,0,0.6
         font_size:50
         size_hint:0.3,0.3
         font_name:'Concept'
@@ -51,19 +53,19 @@
 
         Button:
             text:"Help"
-            background_color:0.43,0.123,0.5,0.6
-            size_hint:0.3,1
+            background_color:0.75,0.5,0,0.6
+            size_hint:0.2,1
             font_name:'Concept'
-            font_size:25
+            font_size:20
             valign:'center'
             halign:'center'
             on_release:root.help_popup()
 
         Button:
             text:"Refresh"
-            background_color:0,1,0,0.85
-            size_hint:0.7,1
-            font_size:25
+            background_color:0,1,0,0.75
+            size_hint:0.8,1
+            font_size:20   
             font_name:'Concept'
             # text_size:self.size
             valign:'center'
