--- a/youvid_downloader.kv
+++ b/youvid_downloader.kv
@@ -12,7 +12,7 @@
         halign:'center'
         valign:'center'
         font_name:'Concept'
-        background_color:0.75,0.5,0,0.2
+        background_color:0.776,0.180,0.180,0.8
         canvas.before:
             Color:
                 rgba:self.background_color
@@ -36,16 +36,30 @@
         focus:True 
 
     Button:
-        text:'Download'
-        background_color:0.75,0.5,0,0.6
-        font_size:50
-        size_hint:0.3,0.3
+        text:'Download Video(mp4)'
+        background_color:1,0,0,1
+        font_size:35
+        size_hint:0.3,0.2
         font_name:'Concept'
         text_size:self.size 
         valign:'center'
         halign:'center'
         on_release:root.download_button()
         id:butt1
+        
+
+    Button:
+        text:'Download Mp3'
+        background_color:1,0,0,0.8
+        font_size:35
+        size_hint:0.15,0.15
+        font_name:'Concept'
+        text_size:self.size 
+        valign:'center'
+        halign:'center'
+        on_release:root.download_mp3_button()
+        id:butt2
+
 
     BoxLayout:
         orientation:'horizontal'
@@ -53,7 +67,7 @@
 
         Button:
             text:"Help"
-            background_color:0.75,0.5,0,0.6
+            background_color:1,0,0,0.6
             size_hint:0.2,1
             font_name:'Concept'
             font_size:20
